--- a/requirements.txt
+++ b/requirements.txt
@@ -25,12 +25,14 @@ jsonpointer==3.0.0
 langchain==0.3.27
 langchain-community==0.3.27
 langchain-core==0.3.72
+langchain-groq==0.3.6
+langchain-huggingface==0.3.1
 langchain-text-splitters==0.3.9
 langgraph==0.6.2
 langgraph-checkpoint==2.1.1
 langgraph-prebuilt==0.6.2
 langgraph-sdk==0.2.0
-langsmith==0.4.8
+langsmith==0.4.10
 lxml==6.0.0
 marshmallow==3.26.1
 multidict==6.6.3
